// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kubernetes Yaml Editor edit mode 1`] = `
<div>
  <div
    class="yamlEditorContainer"
  >
    <div />
    <button
      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      disabled=""
      style="margin-top: 20px;"
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Validate YAML
      </span>
    </button>
  </div>
</div>
`;

exports[`Kubernetes Yaml Editor read mode 1`] = `
<div>
  <div
    class="yamlEditorContainer"
  >
    <div />
  </div>
</div>
`;
